# tinyshader-rs

./: .gitignore  .gitmodules  Cargo.toml
examples/: sample.rs
src/: lib.rs
tinyshader-sys/: Cargo.toml  build.rs
tinyshader-sys/src/: lib.rs
