[package]
name = "tinyshader-sys"
version = "0.1.0"
authors = ["Felipe Costa <felipeagc2@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings to tinyshader"
homepage = "https://github.com/felipeagc/tinyshader-rs"
repository = "https://github.com/felipeagc/tinyshader-rs"
license = "MIT"
categories = ["graphics", "external-ffi-bindings"]

build = "build.rs"
links = "tinyshader"
exclude = ["tinyshader/*/", "!tinyshader/tinyshader/"]

[build-dependencies]
cc = "1.0"

[dependencies]
